--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,11 @@
 }
 
 .bg-color-three-reasons {
-    background: #fff;
+    background-color: #fff;
+}
+
+.bg-color-personal-info {
+    background-color: #f4f4f4;
 }
 
 .ui-menu-color-home {
