--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,8 @@
 /* ------------------- Colors */
 
 .bg-color-name-title {
-    background-color: #676767;
+    /* background-color: #676767; */
+    background-image: linear-gradient(to bottom right, #e84610, #9b59b6);   
     color: white;
 }
 
@@ -88,7 +89,7 @@ header {
 
 
 .logo {
-    background: url("../images/rosie.jpg");
+    background: url("../images/t.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -189,7 +190,7 @@ footer {
 }
 
 .cv-pdf i:hover {
-    color: #e84610;
+    color: #9b59b6;
 }
 
 .social-links {
@@ -213,7 +214,7 @@ footer {
 }
 
 .social-links li a i:hover {
-    background: #e84610;
+    background: #9b59b6;
 }
 
 #footer-details {
@@ -224,7 +225,7 @@ footer {
 
 .three-reasons-icon {
     font-size: 26px;
-    color: #e67e22;
+    color: #9b59b6;
 }
 
 .three-reasons-heading {
@@ -354,7 +355,7 @@ button[type="submit"] {
     margin-top: 15px;
     margin-bottom: 20px;
     color: #fafafa;
-    background-color: #e84610;
+    background-color: #9b59b6;
 }
 
 /* ------------------- Media Queries */
